--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "nodemailer": "^6.9.16",
     "qrcode": "^1.5.4"
   },
